Batch update of generated files

--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -471,6 +471,37 @@
     */
     const newsData = [
   {
+    "title": "Chủ tịch Ủy ban châu Âu sắp đến thăm Việt Nam",
+    "content": "Chủ tịch Ủy ban châu Âu, bà Ursula von der Leyen, sắp có chuyến thăm Việt Nam trong thời gian tới. Đoàn doanh nghiệp EuroCham tại Việt Nam sẽ tham gia các phiên họp cấp cao tại Brussels để chuẩn bị cho chuyến thăm này. Sự kiện này được coi là một bước tiến quan trọng trong việc nâng cao mối quan hệ giữa EU và Việt Nam, đặc biệt là trong bối cảnh kỷ niệm 5 năm Hiệp định Thương mại Tự do EU-Việt Nam (EVFTA).",
+    "link": "https://tuoitre.vn/chu-tich-uy-ban-chau-au-sap-den-tham-viet-nam-20250324184616248.htm",
+    "cat": "kinh-doanh",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Chủ tịch Ủy ban châu Âu sắp thăm Việt Nam vào khi nào?",
+    "answers": [
+      {
+        "text": "Trong thời gian tới",
+        "correct": true
+      },
+      {
+        "text": "Vào tháng 6 năm 2025",
+        "correct": false
+      },
+      {
+        "text": "Vào tháng 12 năm 2025",
+        "correct": false
+      },
+      {
+        "text": "Đã thăm vào năm 2022",
+        "correct": false
+      },
+      {
+        "text": "Không có thông tin cụ thể",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Lối mòn nghiệt ngã của người mẹ 2 lần bước vào trại cai nghiện ma túy",
     "content": "Trần Thị Trà, một người mẹ trẻ 24 tuổi, đã trải qua hai lần cai nghiện ma túy. Cuộc sống của cô bắt đầu trượt dài sau khi thử ma túy trong một lần tìm kiếm niềm vui, dẫn đến hôn nhân tan vỡ và con cái bơ vơ. Sau khi hoàn thành đợt cai nghiện đầu tiên, Trà đã trở lại với ma túy và phải tiếp tục tìm cách vượt qua cơn ghiền. Cô hiện đang quyết tâm làm lại cuộc đời với sự hỗ trợ từ gia đình và cơ sở cai nghiện.",
     "link": "https://tuoitre.vn/loi-mon-nghiet-nga-cua-nguoi-me-2-lan-buoc-vao-trai-cai-nghien-ma-tuy-20250324164510832.htm",
@@ -493,6 +524,33 @@
       },
       {
         "text": "Cô gặp khó khăn trong cuộc sống gia đình.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Vợ cầu thủ Quang Hải sở hữu loạt túi hàng hiệu Hermès, Dior đắt giá",
+    "content": "Vợ cầu thủ Quang Hải, Chu Thanh Huyền, nổi bật với bộ sưu tập túi xách hàng hiệu đến từ các thương hiệu nổi tiếng như Hermès và Dior. Cô là một doanh nhân thành công trong lĩnh vực mỹ phẩm trực tuyến và thường xuyên chia sẻ về cuộc sống xa hoa của mình trên mạng xã hội. Bộ sưu tập của cô bao gồm những mẫu túi đắt giá như Hermès Birkin, Hermès Picotin, và Mini Lady Dior, thể hiện gu thời trang tinh tế và đẳng cấp của một người phụ nữ hiện đại.",
+    "link": "https://dantri.com.vn/giai-tri/vo-cau-thu-quang-hai-so-huu-loat-tui-hang-hieu-hermes-dior-dat-gia-20250323231704019.htm",
+    "cat": "giai-tri",
+    "positivity": 8,
+    "importance": 6,
+    "question": "Vợ cầu thủ Quang Hải sở hữu những thương hiệu túi xách nào?",
+    "answers": [
+      {
+        "text": "Hermès và Dior",
+        "correct": true
+      },
+      {
+        "text": "Chanel và Gucci",
+        "correct": false
+      },
+      {
+        "text": "Prada và Fendi",
+        "correct": false
+      },
+      {
+        "text": "Louis Vuitton và Versace",
         "correct": false
       }
     ]
@@ -3373,32 +3431,28 @@
     ]
   },
   {
-    "title": "4 sai lầm phổ biến khi đi bộ gây đau và tăng cân",
-    "content": "Chuyên gia Joanna Hall chỉ ra bốn sai lầm phổ biến khi đi bộ có thể dẫn đến đau và tăng cân. Những sai lầm này bao gồm sử dụng sai nhóm cơ, đi bộ bằng bàn chân thụ động, tư thế đầu không đúng và không vận động tay. Việc lạm dụng cơ gấp hông, đi bằng bàn chân phẳng và tư thế cúi đầu gây áp lực lên cột sống và khớp, trong khi không vận động tay làm giảm hiệu quả tập luyện. Để cải thiện, cần chú ý đến cách đi bộ và tư thế cơ thể.",
-    "link": "https://vnexpress.net/4-sai-lam-pho-bien-khi-di-bo-gay-dau-va-tang-can-4864895.html",
+    "title": "Uống nước kiềm có phòng ngừa ung thư?",
+    "content": "Nước kiềm, với độ pH cao hơn nước thường, được nhiều người cho rằng có khả năng phòng ngừa ung thư bằng cách trung hòa axit trong cơ thể. Tuy nhiên, chưa có bằng chứng khoa học nào chứng minh rằng uống nước kiềm có thể ngăn ngừa ung thư. Thực tế, môi trường axit không phải là nguyên nhân gây ra ung thư, mà tế bào ung thư mới là yếu tố làm tăng độ axit. Bác sĩ khuyến cáo rằng nước kiềm chỉ nên được sử dụng để bổ sung nước cho cơ thể và không thay thế các phương pháp điều trị ung thư đã được chứng minh.",
+    "link": "https://vnexpress.net/uong-nuoc-kiem-co-phong-ngua-ung-thu-4865064.html",
     "cat": "suc-khoe",
-    "positivity": 7,
+    "positivity": 3,
     "importance": 8,
-    "question": "Những sai lầm nào khi đi bộ có thể gây đau và tăng cân?",
+    "question": "Uống nước kiềm có thật sự phòng ngừa ung thư không?",
     "answers": [
       {
-        "text": "Sử dụng sai nhóm cơ, đi bằng bàn chân thụ động, tư thế đầu không đúng và không vận động tay",
+        "text": "Không, uống nước kiềm không phòng ngừa được ung thư.",
         "correct": true
       },
       {
-        "text": "Đi bộ không đủ nhanh",
+        "text": "Có, nước kiềm giúp ngăn ngừa ung thư hiệu quả.",
         "correct": false
       },
       {
-        "text": "Không mang giày thể thao",
+        "text": "Nước kiềm làm giảm triệu chứng ung thư.",
         "correct": false
       },
       {
-        "text": "Đi bộ trong thời gian ngắn",
-        "correct": false
-      },
-      {
-        "text": "Chỉ đi bộ trên bề mặt bằng phẳng",
+        "text": "Uống nước kiềm có thể thay thế điều trị ung thư.",
         "correct": false
       }
     ]
@@ -3458,28 +3512,32 @@
     ]
   },
   {
-    "title": "Uống nước kiềm có phòng ngừa ung thư?",
-    "content": "Nước kiềm, với độ pH cao hơn nước thường, được nhiều người cho rằng có khả năng phòng ngừa ung thư bằng cách trung hòa axit trong cơ thể. Tuy nhiên, chưa có bằng chứng khoa học nào chứng minh rằng uống nước kiềm có thể ngăn ngừa ung thư. Thực tế, môi trường axit không phải là nguyên nhân gây ra ung thư, mà tế bào ung thư mới là yếu tố làm tăng độ axit. Bác sĩ khuyến cáo rằng nước kiềm chỉ nên được sử dụng để bổ sung nước cho cơ thể và không thay thế các phương pháp điều trị ung thư đã được chứng minh.",
-    "link": "https://vnexpress.net/uong-nuoc-kiem-co-phong-ngua-ung-thu-4865064.html",
+    "title": "4 sai lầm phổ biến khi đi bộ gây đau và tăng cân",
+    "content": "Chuyên gia Joanna Hall chỉ ra bốn sai lầm phổ biến khi đi bộ có thể dẫn đến đau và tăng cân. Những sai lầm này bao gồm sử dụng sai nhóm cơ, đi bộ bằng bàn chân thụ động, tư thế đầu không đúng và không vận động tay. Việc lạm dụng cơ gấp hông, đi bằng bàn chân phẳng và tư thế cúi đầu gây áp lực lên cột sống và khớp, trong khi không vận động tay làm giảm hiệu quả tập luyện. Để cải thiện, cần chú ý đến cách đi bộ và tư thế cơ thể.",
+    "link": "https://vnexpress.net/4-sai-lam-pho-bien-khi-di-bo-gay-dau-va-tang-can-4864895.html",
     "cat": "suc-khoe",
-    "positivity": 3,
+    "positivity": 7,
     "importance": 8,
-    "question": "Uống nước kiềm có thật sự phòng ngừa ung thư không?",
+    "question": "Những sai lầm nào khi đi bộ có thể gây đau và tăng cân?",
     "answers": [
       {
-        "text": "Không, uống nước kiềm không phòng ngừa được ung thư.",
+        "text": "Sử dụng sai nhóm cơ, đi bằng bàn chân thụ động, tư thế đầu không đúng và không vận động tay",
         "correct": true
       },
       {
-        "text": "Có, nước kiềm giúp ngăn ngừa ung thư hiệu quả.",
+        "text": "Đi bộ không đủ nhanh",
         "correct": false
       },
       {
-        "text": "Nước kiềm làm giảm triệu chứng ung thư.",
+        "text": "Không mang giày thể thao",
         "correct": false
       },
       {
-        "text": "Uống nước kiềm có thể thay thế điều trị ung thư.",
+        "text": "Đi bộ trong thời gian ngắn",
+        "correct": false
+      },
+      {
+        "text": "Chỉ đi bộ trên bề mặt bằng phẳng",
         "correct": false
       }
     ]
