Batch update of generated files

--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -108,6 +108,33 @@
     ]
   },
   {
+    "title": "Thứ trưởng Lê Xuân Định: Không còn 'thung lũng chết' trong khoa học",
+    "content": "Thứ trưởng Lê Xuân Định khẳng định rằng không còn tình trạng 'thung lũng chết' trong khoa học ở Việt Nam, khi các nhà khoa học có thể trực tiếp đưa tri thức vào doanh nghiệp để tạo ra sản phẩm và dịch vụ. Ông nhấn mạnh sự cần thiết của hợp tác giữa chuyên gia khoa học và doanh nhân để thương mại hóa các sản phẩm nghiên cứu, đồng thời giới thiệu các nghị quyết mới của Chính phủ nhằm khuyến khích sự đổi mới sáng tạo và phát triển khoa học công nghệ. Các chính sách này sẽ tạo điều kiện thuận lợi cho các nhà khoa học, đặc biệt là giới trẻ, tham gia vào quá trình phát triển kinh tế đất nước.",
+    "link": "https://vnexpress.net/thu-truong-le-xuan-dinh-khong-con-thung-lung-chet-trong-khoa-hoc-4865351.html",
+    "cat": "giao-duc",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Thứ trưởng Lê Xuân Định đã nói gì về tình trạng 'thung lũng chết' trong khoa học?",
+    "answers": [
+      {
+        "text": "Không còn 'thung lũng chết' trong khoa học.",
+        "correct": true
+      },
+      {
+        "text": "Vẫn tồn tại 'thung lũng chết' trong nghiên cứu.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ có ở một số lĩnh vực khoa học.",
+        "correct": false
+      },
+      {
+        "text": "Cần thêm thời gian để khắc phục.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Chủ tịch Ủy ban châu Âu sắp đến thăm Việt Nam",
     "content": "Chủ tịch Ủy ban châu Âu, bà Ursula von der Leyen, sắp có chuyến thăm Việt Nam trong thời gian tới. Đoàn doanh nghiệp EuroCham tại Việt Nam sẽ tham gia các phiên họp cấp cao tại Brussels để chuẩn bị cho chuyến thăm này. Sự kiện này được coi là một bước tiến quan trọng trong việc nâng cao mối quan hệ giữa EU và Việt Nam, đặc biệt là trong bối cảnh kỷ niệm 5 năm Hiệp định Thương mại Tự do EU-Việt Nam (EVFTA).",
     "link": "https://tuoitre.vn/chu-tich-uy-ban-chau-au-sap-den-tham-viet-nam-20250324184616248.htm",
@@ -166,33 +193,6 @@
     ]
   },
   {
-    "title": "Màu ráy tai thế nào là bình thường?",
-    "content": "Ráy tai là một chất tự nhiên được sản xuất từ tế bào chết, mồ hôi và bụi bẩn trong ống tai. Màu sắc của ráy tai bình thường thường là vàng và hơi dính, không có mùi. Nếu ráy tai có màu sắc khác như xanh hoặc có mùi hôi, đó có thể là dấu hiệu của viêm nhiễm. Để duy trì sức khỏe tai, không cần phải lấy ráy tai hàng ngày, và nếu có vấn đề như ngứa hay đau, nên đến bác sĩ để kiểm tra.",
-    "link": "https://vnexpress.net/mau-ray-tai-the-nao-la-binh-thuong-4865292.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Màu ráy tai bình thường là gì?",
-    "answers": [
-      {
-        "text": "Vàng và hơi dính",
-        "correct": true
-      },
-      {
-        "text": "Trắng và khô",
-        "correct": false
-      },
-      {
-        "text": "Đen và có mùi",
-        "correct": false
-      },
-      {
-        "text": "Đỏ và lỏng",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Vợ cầu thủ Quang Hải sở hữu loạt túi hàng hiệu Hermès, Dior đắt giá",
     "content": "Vợ cầu thủ Quang Hải, Chu Thanh Huyền, nổi bật với bộ sưu tập túi xách hàng hiệu đến từ các thương hiệu nổi tiếng như Hermès và Dior. Cô là một doanh nhân thành công trong lĩnh vực mỹ phẩm trực tuyến và thường xuyên chia sẻ về cuộc sống xa hoa của mình trên mạng xã hội. Bộ sưu tập của cô bao gồm những mẫu túi đắt giá như Hermès Birkin, Hermès Picotin, và Mini Lady Dior, thể hiện gu thời trang tinh tế và đẳng cấp của một người phụ nữ hiện đại.",
     "link": "https://dantri.com.vn/giai-tri/vo-cau-thu-quang-hai-so-huu-loat-tui-hang-hieu-hermes-dior-dat-gia-20250323231704019.htm",
@@ -215,6 +215,33 @@
       },
       {
         "text": "Louis Vuitton và Versace",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Màu ráy tai thế nào là bình thường?",
+    "content": "Ráy tai là một chất tự nhiên được sản xuất từ tế bào chết, mồ hôi và bụi bẩn trong ống tai. Màu sắc của ráy tai bình thường thường là vàng và hơi dính, không có mùi. Nếu ráy tai có màu sắc khác như xanh hoặc có mùi hôi, đó có thể là dấu hiệu của viêm nhiễm. Để duy trì sức khỏe tai, không cần phải lấy ráy tai hàng ngày, và nếu có vấn đề như ngứa hay đau, nên đến bác sĩ để kiểm tra.",
+    "link": "https://vnexpress.net/mau-ray-tai-the-nao-la-binh-thuong-4865292.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Màu ráy tai bình thường là gì?",
+    "answers": [
+      {
+        "text": "Vàng và hơi dính",
+        "correct": true
+      },
+      {
+        "text": "Trắng và khô",
+        "correct": false
+      },
+      {
+        "text": "Đen và có mùi",
+        "correct": false
+      },
+      {
+        "text": "Đỏ và lỏng",
         "correct": false
       }
     ]
