Batch update of generated files

--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -112,6 +112,33 @@
     ]
   },
   {
+    "title": "Hà Nội: Buộc thôi việc 3 cô giáo vì bị tố đánh trẻ mầm non",
+    "content": "Cơ quan chức năng tại Hà Nội đã quyết định buộc thôi việc 3 cô giáo tại Trường mầm non Học viện Anh-Xtanh do bị phụ huynh tố cáo hành vi đánh trẻ em. Vụ việc xảy ra từ ngày 10 đến 17 tháng 3, khi một phụ huynh phát hiện con mình có dấu hiệu hoảng loạn và không muốn đi học. Sau khi yêu cầu xem camera và xác nhận tình trạng đánh trẻ, gia đình đã báo cáo sự việc lên cơ quan chức năng. Nhà trường đã thừa nhận sự việc và cam kết sẽ xử lý theo quy định của pháp luật.",
+    "link": "https://dantri.com.vn/giao-duc/ha-noi-buoc-thoi-viec-3-co-giao-vi-bi-to-danh-tre-mam-non-20250324224352698.htm",
+    "cat": "phap-luat",
+    "positivity": 2,
+    "importance": 8,
+    "question": "Tại sao 3 cô giáo ở Hà Nội bị thôi việc?",
+    "answers": [
+      {
+        "text": "Vì bị tố đánh trẻ mầm non",
+        "correct": true
+      },
+      {
+        "text": "Vì vi phạm quy định tuyển dụng",
+        "correct": false
+      },
+      {
+        "text": "Vì không hoàn thành nhiệm vụ",
+        "correct": false
+      },
+      {
+        "text": "Vì lý do sức khỏe",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "HDBank dẫn đầu ‘sân chơi’ cho người trẻ vay mua nhà",
     "content": "HDBank đang dẫn đầu trong việc cung cấp các gói vay mua nhà cho người trẻ tại Việt Nam với thời hạn lên đến 50 năm và lãi suất hấp dẫn từ 3,5%/năm. Chính sách của Chính phủ và Ngân hàng Nhà nước đã tạo điều kiện thuận lợi cho người trẻ dưới 35 tuổi có cơ hội sở hữu nhà ở. Nhiều chuyên gia đánh giá rằng đây là 'thời điểm vàng' để người trẻ hiện thực hóa ước mơ mua nhà nhờ vào các gói tín dụng ưu đãi và lãi suất thấp.",
     "link": "https://tuoitre.vn/hdbank-dan-dau-san-choi-cho-nguoi-tre-vay-mua-nha-20250324193708924.htm",
@@ -997,33 +1024,6 @@
     ]
   },
   {
-    "title": "Sức bật từ hệ sinh thái số liên ngành",
-    "content": "Bài viết thảo luận về sự chuyển đổi số và tác động của nó đến nền kinh tế Việt Nam, đặc biệt là việc hình thành các hệ sinh thái số liên ngành. Với sự phát triển của công nghệ, người dân ngày càng dễ dàng tiếp cận các dịch vụ đa dạng thông qua các ứng dụng như MoMo, giúp kết nối nhiều lĩnh vực như tài chính, giáo dục và y tế. Các doanh nghiệp cũng có cơ hội gia tăng cạnh tranh và phát triển khi tham gia vào hệ sinh thái này, mặc dù việc xây dựng hệ sinh thái số đòi hỏi thời gian và đầu tư tận tâm.",
-    "link": "https://tuoitre.vn/suc-bat-tu-he-sinh-thai-so-lien-nganh-20250324170243163.htm",
-    "cat": "kinh-doanh",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Hệ sinh thái số liên ngành mang lại lợi ích gì cho người dân và doanh nghiệp?",
-    "answers": [
-      {
-        "text": "Người dân dễ dàng tiếp cận dịch vụ và doanh nghiệp gia tăng cạnh tranh.",
-        "correct": true
-      },
-      {
-        "text": "Chỉ người dân mới được hưởng lợi.",
-        "correct": false
-      },
-      {
-        "text": "Doanh nghiệp không có cơ hội phát triển.",
-        "correct": false
-      },
-      {
-        "text": "Hệ sinh thái không ảnh hưởng đến nền kinh tế.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Khán giả buồn vì \"anh chồng làng chài\" Park Bo Gum ít đất diễn, NSX nói gì?",
     "content": "Bộ phim truyền hình \"Khi cuộc đời cho bạn quả quýt\" đang gây sốt tại Hàn Quốc và nhiều quốc gia, với sự tham gia của Park Bo Gum và IU. Tuy nhiên, khán giả đang phàn nàn về việc Park Bo Gum ít xuất hiện trong nửa sau của phim, mặc dù anh là nhân vật chính. Đại diện Netflix cho biết nội dung phim sẽ mở rộng hơn ở phần 4, hứa hẹn sẽ mang đến nhiều cảm xúc cho khán giả và Park Bo Gum sẽ có nhiều đất diễn hơn.",
     "link": "https://dantri.com.vn/giai-tri/khan-gia-buon-vi-anh-chong-lang-chai-park-bo-gum-it-dat-dien-nsx-noi-gi-20250324123845357.htm",
@@ -1073,6 +1073,33 @@
       },
       {
         "text": "Môn này không yêu cầu thiết bị nên ai cũng có thể chơi.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Sức bật từ hệ sinh thái số liên ngành",
+    "content": "Bài viết thảo luận về sự chuyển đổi số và tác động của nó đến nền kinh tế Việt Nam, đặc biệt là việc hình thành các hệ sinh thái số liên ngành. Với sự phát triển của công nghệ, người dân ngày càng dễ dàng tiếp cận các dịch vụ đa dạng thông qua các ứng dụng như MoMo, giúp kết nối nhiều lĩnh vực như tài chính, giáo dục và y tế. Các doanh nghiệp cũng có cơ hội gia tăng cạnh tranh và phát triển khi tham gia vào hệ sinh thái này, mặc dù việc xây dựng hệ sinh thái số đòi hỏi thời gian và đầu tư tận tâm.",
+    "link": "https://tuoitre.vn/suc-bat-tu-he-sinh-thai-so-lien-nganh-20250324170243163.htm",
+    "cat": "kinh-doanh",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Hệ sinh thái số liên ngành mang lại lợi ích gì cho người dân và doanh nghiệp?",
+    "answers": [
+      {
+        "text": "Người dân dễ dàng tiếp cận dịch vụ và doanh nghiệp gia tăng cạnh tranh.",
+        "correct": true
+      },
+      {
+        "text": "Chỉ người dân mới được hưởng lợi.",
+        "correct": false
+      },
+      {
+        "text": "Doanh nghiệp không có cơ hội phát triển.",
+        "correct": false
+      },
+      {
+        "text": "Hệ sinh thái không ảnh hưởng đến nền kinh tế.",
         "correct": false
       }
     ]
@@ -3690,33 +3717,6 @@
     ]
   },
   {
-    "title": "4 hiểu lầm thường gặp về đường",
-    "content": "Bài viết đề cập đến 4 hiểu lầm phổ biến về đường, bao gồm những tác hại của đường không chỉ trong bánh kẹo, nước ngọt mà còn trong nhiều sản phẩm chế biến khác. Đường tinh luyện có thể gây tăng cân, béo phì, rối loạn chuyển hóa và tăng nguy cơ bệnh tim mạch. Tuy nhiên, không phải tất cả loại đường đều xấu; đường tự nhiên trong trái cây và rau củ mang lại nhiều lợi ích cho sức khỏe. Người tiêu dùng nên thận trọng với lượng đường bổ sung và kết hợp ăn uống hợp lý.",
-    "link": "https://vnexpress.net/4-hieu-lam-thuong-gap-ve-duong-4865016.html",
-    "cat": "suc-khoe",
-    "positivity": 6,
-    "importance": 8,
-    "question": "Có những hiểu lầm nào về đường mà mọi người thường mắc phải?",
-    "answers": [
-      {
-        "text": "Đường không chỉ có hại trong bánh kẹo và nước ngọt",
-        "correct": true
-      },
-      {
-        "text": "Đường tự nhiên không gây hại cho sức khỏe",
-        "correct": false
-      },
-      {
-        "text": "Cắt bỏ hoàn toàn đường khỏi chế độ ăn là cần thiết",
-        "correct": false
-      },
-      {
-        "text": "Chỉ ăn đường một lần trong ngày là an toàn",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Skoda Kushaq - CUV cỡ B mới nhận cọc tại đại lý",
     "content": "Skoda Kushaq, mẫu CUV cỡ B mới của Skoda, đã bắt đầu nhận cọc từ giữa tháng 3 với giá dự kiến khoảng 600 triệu đồng. Đây là mẫu xe thứ ba của Skoda tại Việt Nam, sau Kodiaq và Karoq, được lắp ráp bởi tập đoàn Thành Công. Xe có kích thước tương đồng với Mitsubishi Xforce và sẽ cạnh tranh với các đối thủ như Kia Seltos và Hyundai Creta. Dự kiến, Kushaq sẽ được chính thức giới thiệu vào tháng 6 năm 2025 và có thể giao xe vào quý II.",
     "link": "https://vnexpress.net/skoda-kushaq-cuv-co-b-moi-nhan-coc-tai-dai-ly-4864777.html",
@@ -3739,6 +3739,33 @@
       },
       {
         "text": "Giữa tháng 1",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "4 hiểu lầm thường gặp về đường",
+    "content": "Bài viết đề cập đến 4 hiểu lầm phổ biến về đường, bao gồm những tác hại của đường không chỉ trong bánh kẹo, nước ngọt mà còn trong nhiều sản phẩm chế biến khác. Đường tinh luyện có thể gây tăng cân, béo phì, rối loạn chuyển hóa và tăng nguy cơ bệnh tim mạch. Tuy nhiên, không phải tất cả loại đường đều xấu; đường tự nhiên trong trái cây và rau củ mang lại nhiều lợi ích cho sức khỏe. Người tiêu dùng nên thận trọng với lượng đường bổ sung và kết hợp ăn uống hợp lý.",
+    "link": "https://vnexpress.net/4-hieu-lam-thuong-gap-ve-duong-4865016.html",
+    "cat": "suc-khoe",
+    "positivity": 6,
+    "importance": 8,
+    "question": "Có những hiểu lầm nào về đường mà mọi người thường mắc phải?",
+    "answers": [
+      {
+        "text": "Đường không chỉ có hại trong bánh kẹo và nước ngọt",
+        "correct": true
+      },
+      {
+        "text": "Đường tự nhiên không gây hại cho sức khỏe",
+        "correct": false
+      },
+      {
+        "text": "Cắt bỏ hoàn toàn đường khỏi chế độ ăn là cần thiết",
+        "correct": false
+      },
+      {
+        "text": "Chỉ ăn đường một lần trong ngày là an toàn",
         "correct": false
       }
     ]
@@ -4571,28 +4598,28 @@
     ]
   },
   {
-    "title": "Những gia đình Việt tìm cách giữ tiếng mẹ đẻ cho con",
-    "content": "Bài viết tập trung vào nỗi lo của những gia đình Việt sống ở nước ngoài, đặc biệt là tại Nhật Bản, về việc giữ gìn tiếng mẹ đẻ cho con cái. Chị Tô Thị Thu chia sẻ về việc dạy tiếng Việt cho con trai mình, trong khi con đã nhanh chóng hòa nhập và giỏi tiếng Nhật. Nhiều gia đình khác cũng đối mặt với tình hình tương tự, dẫn đến việc thành lập các trường dạy tiếng Việt cho trẻ em gốc Việt ở nước ngoài. Các chuyên gia khuyến khích cha mẹ nên chủ động trong việc duy trì ngôn ngữ và văn hóa Việt Nam cho con cái để giúp trẻ hiểu và tự hào về nguồn gốc dân tộc của mình.",
-    "link": "https://vnexpress.net/nhung-gia-dinh-viet-tim-cach-giu-tieng-me-de-cho-con-4862705.html",
-    "cat": "gia-dinh",
+    "title": "Một ngày luyện diễu binh của khối nữ chiến sĩ Biệt động Sài Gòn",
+    "content": "Các nữ chiến sĩ Biệt động Sài Gòn đang tích cực luyện tập diễu binh dưới cái nắng gắt 36 độ C để chuẩn bị cho lễ kỷ niệm 50 năm thống nhất đất nước. Họ đã luyện tập trong hơn 3 tháng, mỗi buổi kéo dài khoảng hai giờ, với sự hướng dẫn nghiêm túc để đảm bảo kỹ thuật và đồng đều trong các động tác. Mặc dù gặp khó khăn như đau chân hay say nắng, các chiến sĩ vẫn thể hiện quyết tâm cao trong việc hoàn thành mục tiêu luyện tập của mình.",
+    "link": "https://vnexpress.net/mot-ngay-luyen-dieu-binh-cua-khoi-nu-chien-si-biet-dong-sai-gon-4864229.html",
+    "cat": "thoi-su",
     "positivity": 8,
     "importance": 7,
-    "question": "Làm thế nào để các gia đình Việt ở nước ngoài giữ gìn tiếng mẹ đẻ cho con cái?",
+    "question": "Các nữ chiến sĩ Biệt động Sài Gòn đang luyện tập cho sự kiện gì?",
     "answers": [
       {
-        "text": "Bằng cách giao tiếp bằng tiếng Việt và cho trẻ học tiếng Việt thường xuyên.",
+        "text": "Lễ diễu binh kỷ niệm 50 năm thống nhất đất nước",
         "correct": true
       },
       {
-        "text": "Chỉ cần để trẻ học tiếng Nhật là đủ.",
+        "text": "Lễ hội mùa xuân",
         "correct": false
       },
       {
-        "text": "Không cần dạy tiếng Việt nếu trẻ sống ở nước ngoài.",
+        "text": "Cuộc thi thể thao quốc gia",
         "correct": false
       },
       {
-        "text": "Để trẻ tự học tiếng Việt mà không cần sự hỗ trợ của cha mẹ.",
+        "text": "Ngày Quốc tế Phụ nữ",
         "correct": false
       }
     ]
@@ -4656,28 +4683,28 @@
     ]
   },
   {
-    "title": "Một ngày luyện diễu binh của khối nữ chiến sĩ Biệt động Sài Gòn",
-    "content": "Các nữ chiến sĩ Biệt động Sài Gòn đang tích cực luyện tập diễu binh dưới cái nắng gắt 36 độ C để chuẩn bị cho lễ kỷ niệm 50 năm thống nhất đất nước. Họ đã luyện tập trong hơn 3 tháng, mỗi buổi kéo dài khoảng hai giờ, với sự hướng dẫn nghiêm túc để đảm bảo kỹ thuật và đồng đều trong các động tác. Mặc dù gặp khó khăn như đau chân hay say nắng, các chiến sĩ vẫn thể hiện quyết tâm cao trong việc hoàn thành mục tiêu luyện tập của mình.",
-    "link": "https://vnexpress.net/mot-ngay-luyen-dieu-binh-cua-khoi-nu-chien-si-biet-dong-sai-gon-4864229.html",
-    "cat": "thoi-su",
+    "title": "Những gia đình Việt tìm cách giữ tiếng mẹ đẻ cho con",
+    "content": "Bài viết tập trung vào nỗi lo của những gia đình Việt sống ở nước ngoài, đặc biệt là tại Nhật Bản, về việc giữ gìn tiếng mẹ đẻ cho con cái. Chị Tô Thị Thu chia sẻ về việc dạy tiếng Việt cho con trai mình, trong khi con đã nhanh chóng hòa nhập và giỏi tiếng Nhật. Nhiều gia đình khác cũng đối mặt với tình hình tương tự, dẫn đến việc thành lập các trường dạy tiếng Việt cho trẻ em gốc Việt ở nước ngoài. Các chuyên gia khuyến khích cha mẹ nên chủ động trong việc duy trì ngôn ngữ và văn hóa Việt Nam cho con cái để giúp trẻ hiểu và tự hào về nguồn gốc dân tộc của mình.",
+    "link": "https://vnexpress.net/nhung-gia-dinh-viet-tim-cach-giu-tieng-me-de-cho-con-4862705.html",
+    "cat": "gia-dinh",
     "positivity": 8,
     "importance": 7,
-    "question": "Các nữ chiến sĩ Biệt động Sài Gòn đang luyện tập cho sự kiện gì?",
+    "question": "Làm thế nào để các gia đình Việt ở nước ngoài giữ gìn tiếng mẹ đẻ cho con cái?",
     "answers": [
       {
-        "text": "Lễ diễu binh kỷ niệm 50 năm thống nhất đất nước",
+        "text": "Bằng cách giao tiếp bằng tiếng Việt và cho trẻ học tiếng Việt thường xuyên.",
         "correct": true
       },
       {
-        "text": "Lễ hội mùa xuân",
+        "text": "Chỉ cần để trẻ học tiếng Nhật là đủ.",
         "correct": false
       },
       {
-        "text": "Cuộc thi thể thao quốc gia",
+        "text": "Không cần dạy tiếng Việt nếu trẻ sống ở nước ngoài.",
         "correct": false
       },
       {
-        "text": "Ngày Quốc tế Phụ nữ",
+        "text": "Để trẻ tự học tiếng Việt mà không cần sự hỗ trợ của cha mẹ.",
         "correct": false
       }
     ]
@@ -4826,33 +4853,6 @@
     ]
   },
   {
-    "title": "Trăm năm đổi thay của quảng trường Đông Kinh Nghĩa Thục",
-    "content": "Quảng trường Đông Kinh Nghĩa Thục, từng là bãi đất trống ven Hồ Gươm, đã trải qua nhiều biến đổi lớn trong suốt một thế kỷ. Từ thời Pháp thuộc, nơi đây trở thành trung tâm giao thông và cũng là nơi diễn ra nhiều sự kiện quan trọng, bao gồm cả những cuộc xử án chính trị. Sau năm 1945, quảng trường được đặt tên để tưởng nhớ đến ngôi trường dạy chữ quốc ngữ và tư tưởng cách mạng. Qua các giai đoạn lịch sử, quảng trường đã trở thành một phần không thể thiếu trong đời sống người dân Hà Nội, nhưng hiện nay đang đối diện với nhiều thách thức trong việc bảo tồn không gian và văn hóa của nó.",
-    "link": "https://vnexpress.net/tram-nam-doi-thay-cua-quang-truong-dong-kinh-nghia-thuc-4864233.html",
-    "cat": "thoi-su",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Quảng trường Đông Kinh Nghĩa Thục đã thay đổi như thế nào qua các thời kỳ?",
-    "answers": [
-      {
-        "text": "Từ bãi đất trống trở thành trung tâm giao thông và điểm đến du lịch",
-        "correct": true
-      },
-      {
-        "text": "Luôn giữ nguyên hình dạng từ thời Pháp thuộc đến nay",
-        "correct": false
-      },
-      {
-        "text": "Không có sự thay đổi nào đáng kể",
-        "correct": false
-      },
-      {
-        "text": "Chỉ được cải tạo nhẹ nhàng mà không thay đổi chức năng",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Hàng loạt xe Mitsubishi khuyến mãi lệ phí trước bạ tháng 3",
     "content": "Mitsubishi đang triển khai chương trình khuyến mãi lệ phí trước bạ cho nhiều mẫu xe trong tháng 3, hỗ trợ từ 50% đến 100% tùy từng sản phẩm. Các mẫu xe như Xpander và Outlander được giảm giá trực tiếp, trong khi mẫu Xforce khuyến mãi phụ kiện. Chương trình này nhằm kích cầu tiêu dùng và cũng tương tự với các hãng xe khác như Honda và Toyota. Mitsubishi ghi nhận doanh số bán tăng 38% so với cùng kỳ năm trước, với Xpander và Xforce là hai mẫu xe bán chạy nhất.",
     "link": "https://vnexpress.net/hang-loat-xe-mitsubishi-khuyen-mai-le-phi-truoc-ba-thang-3-4864768.html",
@@ -4902,6 +4902,33 @@
       },
       {
         "text": "Trở thành nhạc sĩ",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Trăm năm đổi thay của quảng trường Đông Kinh Nghĩa Thục",
+    "content": "Quảng trường Đông Kinh Nghĩa Thục, từng là bãi đất trống ven Hồ Gươm, đã trải qua nhiều biến đổi lớn trong suốt một thế kỷ. Từ thời Pháp thuộc, nơi đây trở thành trung tâm giao thông và cũng là nơi diễn ra nhiều sự kiện quan trọng, bao gồm cả những cuộc xử án chính trị. Sau năm 1945, quảng trường được đặt tên để tưởng nhớ đến ngôi trường dạy chữ quốc ngữ và tư tưởng cách mạng. Qua các giai đoạn lịch sử, quảng trường đã trở thành một phần không thể thiếu trong đời sống người dân Hà Nội, nhưng hiện nay đang đối diện với nhiều thách thức trong việc bảo tồn không gian và văn hóa của nó.",
+    "link": "https://vnexpress.net/tram-nam-doi-thay-cua-quang-truong-dong-kinh-nghia-thuc-4864233.html",
+    "cat": "thoi-su",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Quảng trường Đông Kinh Nghĩa Thục đã thay đổi như thế nào qua các thời kỳ?",
+    "answers": [
+      {
+        "text": "Từ bãi đất trống trở thành trung tâm giao thông và điểm đến du lịch",
+        "correct": true
+      },
+      {
+        "text": "Luôn giữ nguyên hình dạng từ thời Pháp thuộc đến nay",
+        "correct": false
+      },
+      {
+        "text": "Không có sự thay đổi nào đáng kể",
+        "correct": false
+      },
+      {
+        "text": "Chỉ được cải tạo nhẹ nhàng mà không thay đổi chức năng",
         "correct": false
       }
     ]
