--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -471,6 +471,33 @@
     */
     const newsData = [
   {
+    "title": "Giải nhất Khoa học kỹ thuật quốc gia 2025 bị tố giống sản phẩm nước ngoài",
+    "content": "Giải nhất cuộc thi Khoa học kỹ thuật quốc gia 2025 đã bị tố cáo giống sản phẩm của một chuyên gia nước ngoài, Samuel Alexander. Dự án mang tên \"Hệ thống phân loại rác thông minh tích hợp trí tuệ nhân tạo và cảm biến âm thanh\" của hai học sinh Trường THPT Nguyễn Siêu, Hưng Yên, được cho là có nhiều điểm tương đồng với sản phẩm đã công bố trước đó. Bộ Giáo dục và Đào tạo đã xác nhận thông tin và sẽ tiến hành kiểm tra để xử lý nếu phát hiện vi phạm.",
+    "link": "https://dantri.com.vn/giao-duc/giai-nhat-khoa-hoc-ky-thuat-quoc-gia-2025-bi-to-giong-san-pham-nuoc-ngoai-20250324234627264.htm",
+    "cat": "giao-duc",
+    "positivity": 4,
+    "importance": 7,
+    "question": "Dự án nào đã bị tố giống sản phẩm nước ngoài tại cuộc thi Khoa học kỹ thuật quốc gia 2025?",
+    "answers": [
+      {
+        "text": "Hệ thống phân loại rác thông minh tích hợp trí tuệ nhân tạo và cảm biến âm thanh",
+        "correct": true
+      },
+      {
+        "text": "Hệ thống phân loại rác tự động",
+        "correct": false
+      },
+      {
+        "text": "Ứng dụng phân loại rác bằng hình ảnh",
+        "correct": false
+      },
+      {
+        "text": "Dự án phân loại rác bằng tay",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Dàn cầu thủ Lào kiều chờ đấu Việt Nam",
     "content": "Đội tuyển Lào chuẩn bị cho trận đấu với Việt Nam trong khuôn khổ vòng loại Asian Cup 2027 diễn ra vào ngày 25/3. Lực lượng của Lào được cải thiện nhờ sự bổ sung của ba cầu thủ Lào kiều, hứa hẹn sẽ mang đến sức sống mới cho đội. HLV Ha Hyeok-jun tin tưởng vào khả năng của đội và kỳ vọng họ sẽ có màn trình diễn tốt hơn so với những thất bại trước đó trước Việt Nam. Trận đấu sẽ diễn ra tại sân Gò Đậu, Bình Dương, vào lúc 19h30.",
     "link": "https://vnexpress.net/dan-cau-thu-lao-kieu-cho-dau-viet-nam-4865384.html",
@@ -842,28 +869,32 @@
     ]
   },
   {
-    "title": "Màu ráy tai thế nào là bình thường?",
-    "content": "Ráy tai là một chất tự nhiên được sản xuất từ tế bào chết, mồ hôi và bụi bẩn trong ống tai. Màu sắc của ráy tai bình thường thường là vàng và hơi dính, không có mùi. Nếu ráy tai có màu sắc khác như xanh hoặc có mùi hôi, đó có thể là dấu hiệu của viêm nhiễm. Để duy trì sức khỏe tai, không cần phải lấy ráy tai hàng ngày, và nếu có vấn đề như ngứa hay đau, nên đến bác sĩ để kiểm tra.",
-    "link": "https://vnexpress.net/mau-ray-tai-the-nao-la-binh-thuong-4865292.html",
+    "title": "Thiếu vi chất - thách thức lớn nhất với trẻ em Việt",
+    "content": "Trẻ em Việt Nam đang phải đối mặt với thách thức lớn nhất về dinh dưỡng là thiếu vi chất dinh dưỡng, theo báo cáo từ bà Supasita Kraisri, Giám đốc tiếp thị FrieslandCampina Việt Nam. Khảo sát SEANUTS II cho thấy tỷ lệ trẻ thiếu vi chất dinh dưỡng, đặc biệt là sắt và kẽm, đang ở mức cao, với nhiều trẻ không đáp ứng được nhu cầu dinh dưỡng hàng ngày. Thiếu vi chất có thể dẫn đến những ảnh hưởng nghiêm trọng đến sự phát triển thể chất và trí tuệ của trẻ, do vậy việc chăm sóc dinh dưỡng cho trẻ em là rất cần thiết.",
+    "link": "https://vnexpress.net/thieu-vi-chat-thach-thuc-lon-nhat-voi-tre-em-viet-4865346.html",
     "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Màu ráy tai bình thường là gì?",
+    "positivity": 4,
+    "importance": 9,
+    "question": "Thiếu vi chất dinh dưỡng có ảnh hưởng gì đến trẻ em Việt Nam?",
     "answers": [
       {
-        "text": "Vàng và hơi dính",
+        "text": "Có thể dẫn đến sự phát triển thể chất và trí tuệ kém.",
         "correct": true
       },
       {
-        "text": "Trắng và khô",
+        "text": "Không có ảnh hưởng gì.",
         "correct": false
       },
       {
-        "text": "Đen và có mùi",
+        "text": "Giúp trẻ em phát triển nhanh chóng.",
         "correct": false
       },
       {
-        "text": "Đỏ và lỏng",
+        "text": "Làm tăng cường sức khỏe cho trẻ.",
+        "correct": false
+      },
+      {
+        "text": "Giảm nguy cơ mắc bệnh cho trẻ.",
         "correct": false
       }
     ]
@@ -896,32 +927,28 @@
     ]
   },
   {
-    "title": "Thiếu vi chất - thách thức lớn nhất với trẻ em Việt",
-    "content": "Trẻ em Việt Nam đang phải đối mặt với thách thức lớn nhất về dinh dưỡng là thiếu vi chất dinh dưỡng, theo báo cáo từ bà Supasita Kraisri, Giám đốc tiếp thị FrieslandCampina Việt Nam. Khảo sát SEANUTS II cho thấy tỷ lệ trẻ thiếu vi chất dinh dưỡng, đặc biệt là sắt và kẽm, đang ở mức cao, với nhiều trẻ không đáp ứng được nhu cầu dinh dưỡng hàng ngày. Thiếu vi chất có thể dẫn đến những ảnh hưởng nghiêm trọng đến sự phát triển thể chất và trí tuệ của trẻ, do vậy việc chăm sóc dinh dưỡng cho trẻ em là rất cần thiết.",
-    "link": "https://vnexpress.net/thieu-vi-chat-thach-thuc-lon-nhat-voi-tre-em-viet-4865346.html",
+    "title": "Màu ráy tai thế nào là bình thường?",
+    "content": "Ráy tai là một chất tự nhiên được sản xuất từ tế bào chết, mồ hôi và bụi bẩn trong ống tai. Màu sắc của ráy tai bình thường thường là vàng và hơi dính, không có mùi. Nếu ráy tai có màu sắc khác như xanh hoặc có mùi hôi, đó có thể là dấu hiệu của viêm nhiễm. Để duy trì sức khỏe tai, không cần phải lấy ráy tai hàng ngày, và nếu có vấn đề như ngứa hay đau, nên đến bác sĩ để kiểm tra.",
+    "link": "https://vnexpress.net/mau-ray-tai-the-nao-la-binh-thuong-4865292.html",
     "cat": "suc-khoe",
-    "positivity": 4,
-    "importance": 9,
-    "question": "Thiếu vi chất dinh dưỡng có ảnh hưởng gì đến trẻ em Việt Nam?",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Màu ráy tai bình thường là gì?",
     "answers": [
       {
-        "text": "Có thể dẫn đến sự phát triển thể chất và trí tuệ kém.",
+        "text": "Vàng và hơi dính",
         "correct": true
       },
       {
-        "text": "Không có ảnh hưởng gì.",
+        "text": "Trắng và khô",
         "correct": false
       },
       {
-        "text": "Giúp trẻ em phát triển nhanh chóng.",
+        "text": "Đen và có mùi",
         "correct": false
       },
       {
-        "text": "Làm tăng cường sức khỏe cho trẻ.",
-        "correct": false
-      },
-      {
-        "text": "Giảm nguy cơ mắc bệnh cho trẻ.",
+        "text": "Đỏ và lỏng",
         "correct": false
       }
     ]
@@ -1329,33 +1356,6 @@
     ]
   },
   {
-    "title": "Uống nhiều trà sữa hại thận?",
-    "content": "Uống nhiều trà sữa có thể gây hại cho thận, đặc biệt là khi tiêu thụ quá nhiều đường và caffeine. Một ly trà sữa thường chứa từ 50-60g đường, vượt quá mức khuyến cáo hàng ngày, dẫn đến nguy cơ béo phì, tiểu đường và bệnh thận mạn tính. Thói quen uống trà sữa thay nước lọc cũng có thể làm tăng áp lực lên thận và gây mất nước, tăng nguy cơ hình thành sỏi thận. Do đó, nên hạn chế uống trà sữa và duy trì thói quen uống đủ nước mỗi ngày để bảo vệ sức khỏe thận.",
-    "link": "https://vnexpress.net/uong-nhieu-tra-sua-hai-than-4865228.html",
-    "cat": "suc-khoe",
-    "positivity": 3,
-    "importance": 8,
-    "question": "Uống nhiều trà sữa có hại cho thận không?",
-    "answers": [
-      {
-        "text": "Có, uống nhiều trà sữa có thể hại thận.",
-        "correct": true
-      },
-      {
-        "text": "Không, trà sữa hoàn toàn an toàn cho thận.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ có trà sữa trân châu mới hại thận.",
-        "correct": false
-      },
-      {
-        "text": "Uống trà sữa giúp tăng cường chức năng thận.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Huyết áp của bạn có bình thường không?",
     "content": "Huyết áp có thể bị ảnh hưởng bởi nhiều yếu tố như lối sống, cân nặng và giấc ngủ. Việc điều chỉnh những yếu tố này có thể giúp huyết áp trở về mức bình thường. Tuy nhiên, cũng có những nguyên nhân khác có thể dẫn đến tình trạng huyết áp cao bất thường. Do đó, việc theo dõi và kiểm tra huyết áp thường xuyên là rất quan trọng.",
     "link": "https://vnexpress.net/huyet-ap-cua-ban-co-binh-thuong-khong-4865191.html",
@@ -1382,6 +1382,33 @@
       },
       {
         "text": "Di truyền",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Uống nhiều trà sữa hại thận?",
+    "content": "Uống nhiều trà sữa có thể gây hại cho thận, đặc biệt là khi tiêu thụ quá nhiều đường và caffeine. Một ly trà sữa thường chứa từ 50-60g đường, vượt quá mức khuyến cáo hàng ngày, dẫn đến nguy cơ béo phì, tiểu đường và bệnh thận mạn tính. Thói quen uống trà sữa thay nước lọc cũng có thể làm tăng áp lực lên thận và gây mất nước, tăng nguy cơ hình thành sỏi thận. Do đó, nên hạn chế uống trà sữa và duy trì thói quen uống đủ nước mỗi ngày để bảo vệ sức khỏe thận.",
+    "link": "https://vnexpress.net/uong-nhieu-tra-sua-hai-than-4865228.html",
+    "cat": "suc-khoe",
+    "positivity": 3,
+    "importance": 8,
+    "question": "Uống nhiều trà sữa có hại cho thận không?",
+    "answers": [
+      {
+        "text": "Có, uống nhiều trà sữa có thể hại thận.",
+        "correct": true
+      },
+      {
+        "text": "Không, trà sữa hoàn toàn an toàn cho thận.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ có trà sữa trân châu mới hại thận.",
+        "correct": false
+      },
+      {
+        "text": "Uống trà sữa giúp tăng cường chức năng thận.",
         "correct": false
       }
     ]
@@ -3744,33 +3771,6 @@
     ]
   },
   {
-    "title": "Uống nước kiềm có phòng ngừa ung thư?",
-    "content": "Nước kiềm, với độ pH cao hơn nước thường, được nhiều người cho rằng có khả năng phòng ngừa ung thư bằng cách trung hòa axit trong cơ thể. Tuy nhiên, chưa có bằng chứng khoa học nào chứng minh rằng uống nước kiềm có thể ngăn ngừa ung thư. Thực tế, môi trường axit không phải là nguyên nhân gây ra ung thư, mà tế bào ung thư mới là yếu tố làm tăng độ axit. Bác sĩ khuyến cáo rằng nước kiềm chỉ nên được sử dụng để bổ sung nước cho cơ thể và không thay thế các phương pháp điều trị ung thư đã được chứng minh.",
-    "link": "https://vnexpress.net/uong-nuoc-kiem-co-phong-ngua-ung-thu-4865064.html",
-    "cat": "suc-khoe",
-    "positivity": 3,
-    "importance": 8,
-    "question": "Uống nước kiềm có thật sự phòng ngừa ung thư không?",
-    "answers": [
-      {
-        "text": "Không, uống nước kiềm không phòng ngừa được ung thư.",
-        "correct": true
-      },
-      {
-        "text": "Có, nước kiềm giúp ngăn ngừa ung thư hiệu quả.",
-        "correct": false
-      },
-      {
-        "text": "Nước kiềm làm giảm triệu chứng ung thư.",
-        "correct": false
-      },
-      {
-        "text": "Uống nước kiềm có thể thay thế điều trị ung thư.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Từng mắc quai bị có vô sinh không?",
     "content": "Bệnh quai bị có thể gây ra một số biến chứng nghiêm trọng, bao gồm viêm tinh hoàn ở nam giới, đặc biệt là sau tuổi dậy thì, dẫn đến nguy cơ vô sinh. Nếu viêm tinh hoàn xảy ra ở cả hai bên, khả năng sản xuất tinh trùng sẽ suy giảm nghiêm trọng, gây ra tình trạng vô tinh. Trẻ gái cũng có thể bị viêm buồng trứng, nhưng ít khi dẫn đến vô sinh. Để phòng ngừa, việc tiêm vaccine quai bị là rất quan trọng.",
     "link": "https://vnexpress.net/tung-mac-quai-bi-co-vo-sinh-khong-4865030.html",
@@ -3820,6 +3820,33 @@
       },
       {
         "text": "Thịt gà, xôi, kem, trà sữa, bánh ngọt",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Uống nước kiềm có phòng ngừa ung thư?",
+    "content": "Nước kiềm, với độ pH cao hơn nước thường, được nhiều người cho rằng có khả năng phòng ngừa ung thư bằng cách trung hòa axit trong cơ thể. Tuy nhiên, chưa có bằng chứng khoa học nào chứng minh rằng uống nước kiềm có thể ngăn ngừa ung thư. Thực tế, môi trường axit không phải là nguyên nhân gây ra ung thư, mà tế bào ung thư mới là yếu tố làm tăng độ axit. Bác sĩ khuyến cáo rằng nước kiềm chỉ nên được sử dụng để bổ sung nước cho cơ thể và không thay thế các phương pháp điều trị ung thư đã được chứng minh.",
+    "link": "https://vnexpress.net/uong-nuoc-kiem-co-phong-ngua-ung-thu-4865064.html",
+    "cat": "suc-khoe",
+    "positivity": 3,
+    "importance": 8,
+    "question": "Uống nước kiềm có thật sự phòng ngừa ung thư không?",
+    "answers": [
+      {
+        "text": "Không, uống nước kiềm không phòng ngừa được ung thư.",
+        "correct": true
+      },
+      {
+        "text": "Có, nước kiềm giúp ngăn ngừa ung thư hiệu quả.",
+        "correct": false
+      },
+      {
+        "text": "Nước kiềm làm giảm triệu chứng ung thư.",
+        "correct": false
+      },
+      {
+        "text": "Uống nước kiềm có thể thay thế điều trị ung thư.",
         "correct": false
       }
     ]
