--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -471,6 +471,33 @@
     */
     const newsData = [
   {
+    "title": "Bữa tối có nên 'ăn như ăn mày'?",
+    "content": "Bài viết nhấn mạnh tầm quan trọng của bữa tối đối với sức khỏe con người, phản bác lại quan niệm \"ăn tối như kẻ ăn mày\". Bữa tối cần cung cấp đủ dinh dưỡng và không nên bị bỏ qua hoặc ăn quá ít, vì điều này có thể gây hại cho sức khỏe, như mệt mỏi hay khó ngủ. Người trưởng thành nên phân chia lượng calo hợp lý cho ba bữa chính, trong đó bữa tối vẫn cần thiết nhưng có thể giảm nhẹ để đảm bảo cân bằng dinh dưỡng.",
+    "link": "https://vnexpress.net/bua-toi-co-nen-an-nhu-an-may-4865216.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Bữa tối có thực sự quan trọng cho sức khỏe không?",
+    "answers": [
+      {
+        "text": "Có, bữa tối rất quan trọng cho sức khỏe.",
+        "correct": true
+      },
+      {
+        "text": "Không, bữa tối có thể bỏ qua.",
+        "correct": false
+      },
+      {
+        "text": "Bữa tối chỉ cần ăn ít.",
+        "correct": false
+      },
+      {
+        "text": "Bữa tối không cần thiết phải ăn đủ chất.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "TP HCM sẽ bỏ chính sách hỗ trợ thêm cho cán bộ mất việc do tinh giản",
     "content": "TP HCM sẽ bãi bỏ chính sách hỗ trợ thêm cho cán bộ, công chức, viên chức mất việc do tinh giản bộ máy, theo đề xuất của UBND thành phố. Lý do là Nghị quyết 01 về chế độ hỗ trợ này đã hết hiệu lực do Chính phủ ban hành Nghị định 67 sửa đổi một số quy định liên quan. Các cán bộ đã được cấp có thẩm quyền giải quyết hỗ trợ trước ngày 15/3 vẫn được hưởng, nhưng chính sách hỗ trợ thêm sẽ không còn áp dụng cho các trường hợp mới.",
     "link": "https://vnexpress.net/tp-hcm-se-bo-chinh-sach-ho-tro-them-cho-can-bo-mat-viec-do-tinh-gian-4865301.html",
@@ -1151,33 +1178,6 @@
     ]
   },
   {
-    "title": "Thai phụ uống cacao được không?",
-    "content": "Phụ nữ mang thai có thể uống cacao với liều lượng vừa phải. Cacao mang lại nhiều lợi ích như ổn định tâm trạng, tăng cường miễn dịch và tốt cho hệ tiêu hóa. Chất theobromine trong cacao còn giúp giảm nguy cơ tiền sản giật và các biến chứng cho thai nhi. Tuy nhiên, thai phụ cần chú ý không tiêu thụ quá 200 mg caffeine mỗi ngày để tránh nguy cơ sảy thai.",
-    "link": "https://vnexpress.net/thai-phu-uong-cacao-duoc-khong-4865277.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Thai phụ có nên uống cacao không?",
-    "answers": [
-      {
-        "text": "Có, nếu uống với liều lượng vừa phải.",
-        "correct": true
-      },
-      {
-        "text": "Không, cacao không tốt cho thai phụ.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ nên uống cacao vào buổi tối.",
-        "correct": false
-      },
-      {
-        "text": "Cacao có thể gây hại cho thai nhi.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Dấu ấn 30 năm Toyota có mặt Việt Nam",
     "content": "Toyota Việt Nam đã đánh dấu 30 năm hoạt động với việc xuất xưởng chiếc xe thứ 700.000 và tổ chức các hoạt động an toàn giao thông cho cộng đồng. Trong 30 năm qua, hãng đã có nhiều đóng góp cho kinh tế - xã hội, đồng thời nâng cao ý thức giao thông cho thế hệ trẻ thông qua các chương trình giáo dục. Các mẫu xe mới của Toyota được cải tiến với công nghệ an toàn tiên tiến, hướng tới việc giảm thiểu rủi ro giao thông cho người dùng. Hãng cũng đã đầu tư hơn 31 triệu USD vào các hoạt động trách nhiệm xã hội tại Việt Nam.",
     "link": "https://vnexpress.net/dau-an-30-nam-toyota-co-mat-viet-nam-4865138.html",
@@ -1200,6 +1200,33 @@
       },
       {
         "text": "Tăng cường quảng cáo sản phẩm mới.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Thai phụ uống cacao được không?",
+    "content": "Phụ nữ mang thai có thể uống cacao với liều lượng vừa phải. Cacao mang lại nhiều lợi ích như ổn định tâm trạng, tăng cường miễn dịch và tốt cho hệ tiêu hóa. Chất theobromine trong cacao còn giúp giảm nguy cơ tiền sản giật và các biến chứng cho thai nhi. Tuy nhiên, thai phụ cần chú ý không tiêu thụ quá 200 mg caffeine mỗi ngày để tránh nguy cơ sảy thai.",
+    "link": "https://vnexpress.net/thai-phu-uong-cacao-duoc-khong-4865277.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Thai phụ có nên uống cacao không?",
+    "answers": [
+      {
+        "text": "Có, nếu uống với liều lượng vừa phải.",
+        "correct": true
+      },
+      {
+        "text": "Không, cacao không tốt cho thai phụ.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ nên uống cacao vào buổi tối.",
+        "correct": false
+      },
+      {
+        "text": "Cacao có thể gây hại cho thai nhi.",
         "correct": false
       }
     ]
@@ -1410,33 +1437,6 @@
     ]
   },
   {
-    "title": "Sức bật từ hệ sinh thái số liên ngành",
-    "content": "Bài viết thảo luận về sự chuyển đổi số và tác động của nó đến nền kinh tế Việt Nam, đặc biệt là việc hình thành các hệ sinh thái số liên ngành. Với sự phát triển của công nghệ, người dân ngày càng dễ dàng tiếp cận các dịch vụ đa dạng thông qua các ứng dụng như MoMo, giúp kết nối nhiều lĩnh vực như tài chính, giáo dục và y tế. Các doanh nghiệp cũng có cơ hội gia tăng cạnh tranh và phát triển khi tham gia vào hệ sinh thái này, mặc dù việc xây dựng hệ sinh thái số đòi hỏi thời gian và đầu tư tận tâm.",
-    "link": "https://tuoitre.vn/suc-bat-tu-he-sinh-thai-so-lien-nganh-20250324170243163.htm",
-    "cat": "kinh-doanh",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Hệ sinh thái số liên ngành mang lại lợi ích gì cho người dân và doanh nghiệp?",
-    "answers": [
-      {
-        "text": "Người dân dễ dàng tiếp cận dịch vụ và doanh nghiệp gia tăng cạnh tranh.",
-        "correct": true
-      },
-      {
-        "text": "Chỉ người dân mới được hưởng lợi.",
-        "correct": false
-      },
-      {
-        "text": "Doanh nghiệp không có cơ hội phát triển.",
-        "correct": false
-      },
-      {
-        "text": "Hệ sinh thái không ảnh hưởng đến nền kinh tế.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Huyết áp của bạn có bình thường không?",
     "content": "Huyết áp có thể bị ảnh hưởng bởi nhiều yếu tố như lối sống, cân nặng và giấc ngủ. Việc điều chỉnh những yếu tố này có thể giúp huyết áp trở về mức bình thường. Tuy nhiên, cũng có những nguyên nhân khác có thể dẫn đến tình trạng huyết áp cao bất thường. Do đó, việc theo dõi và kiểm tra huyết áp thường xuyên là rất quan trọng.",
     "link": "https://vnexpress.net/huyet-ap-cua-ban-co-binh-thuong-khong-4865191.html",
@@ -1495,6 +1495,33 @@
     ]
   },
   {
+    "title": "Chạy bộ có phải môn thể thao cho người giàu?",
+    "content": "Chạy bộ là môn thể thao dễ tiếp cận nhưng đang ngày càng phổ biến hơn trong nhóm người có thu nhập cao. Nghiên cứu cho thấy có mối liên hệ giữa thu nhập cao và tỷ lệ tham gia chạy bộ, với những người này thường có điều kiện tốt hơn để tập luyện và tham gia các giải đấu. Chạy bộ không chỉ mang lại lợi ích sức khỏe mà còn giúp xả stress và tạo kết nối cộng đồng, mặc dù không phải là môn thể thao dành riêng cho người giàu, nhưng nhóm này có xu hướng duy trì thói quen chạy bộ hơn.",
+    "link": "https://vnexpress.net/chay-bo-co-phai-mon-the-thao-cho-nguoi-giau-4865003.html",
+    "cat": "the-thao",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Chạy bộ có phải là môn thể thao dành cho người giàu không?",
+    "answers": [
+      {
+        "text": "Không hẳn, nhưng người giàu có xu hướng chạy bộ nhiều hơn.",
+        "correct": true
+      },
+      {
+        "text": "Chắc chắn là môn thể thao chỉ dành cho người giàu.",
+        "correct": false
+      },
+      {
+        "text": "Chạy bộ chỉ phù hợp với người có thời gian rảnh.",
+        "correct": false
+      },
+      {
+        "text": "Môn này không yêu cầu thiết bị nên ai cũng có thể chơi.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Khán giả buồn vì \"anh chồng làng chài\" Park Bo Gum ít đất diễn, NSX nói gì?",
     "content": "Bộ phim truyền hình \"Khi cuộc đời cho bạn quả quýt\" đang gây sốt tại Hàn Quốc và nhiều quốc gia, với sự tham gia của Park Bo Gum và IU. Tuy nhiên, khán giả đang phàn nàn về việc Park Bo Gum ít xuất hiện trong nửa sau của phim, mặc dù anh là nhân vật chính. Đại diện Netflix cho biết nội dung phim sẽ mở rộng hơn ở phần 4, hứa hẹn sẽ mang đến nhiều cảm xúc cho khán giả và Park Bo Gum sẽ có nhiều đất diễn hơn.",
     "link": "https://dantri.com.vn/giai-tri/khan-gia-buon-vi-anh-chong-lang-chai-park-bo-gum-it-dat-dien-nsx-noi-gi-20250324123845357.htm",
@@ -1522,28 +1549,28 @@
     ]
   },
   {
-    "title": "Chạy bộ có phải môn thể thao cho người giàu?",
-    "content": "Chạy bộ là môn thể thao dễ tiếp cận nhưng đang ngày càng phổ biến hơn trong nhóm người có thu nhập cao. Nghiên cứu cho thấy có mối liên hệ giữa thu nhập cao và tỷ lệ tham gia chạy bộ, với những người này thường có điều kiện tốt hơn để tập luyện và tham gia các giải đấu. Chạy bộ không chỉ mang lại lợi ích sức khỏe mà còn giúp xả stress và tạo kết nối cộng đồng, mặc dù không phải là môn thể thao dành riêng cho người giàu, nhưng nhóm này có xu hướng duy trì thói quen chạy bộ hơn.",
-    "link": "https://vnexpress.net/chay-bo-co-phai-mon-the-thao-cho-nguoi-giau-4865003.html",
-    "cat": "the-thao",
+    "title": "Sức bật từ hệ sinh thái số liên ngành",
+    "content": "Bài viết thảo luận về sự chuyển đổi số và tác động của nó đến nền kinh tế Việt Nam, đặc biệt là việc hình thành các hệ sinh thái số liên ngành. Với sự phát triển của công nghệ, người dân ngày càng dễ dàng tiếp cận các dịch vụ đa dạng thông qua các ứng dụng như MoMo, giúp kết nối nhiều lĩnh vực như tài chính, giáo dục và y tế. Các doanh nghiệp cũng có cơ hội gia tăng cạnh tranh và phát triển khi tham gia vào hệ sinh thái này, mặc dù việc xây dựng hệ sinh thái số đòi hỏi thời gian và đầu tư tận tâm.",
+    "link": "https://tuoitre.vn/suc-bat-tu-he-sinh-thai-so-lien-nganh-20250324170243163.htm",
+    "cat": "kinh-doanh",
     "positivity": 8,
-    "importance": 7,
-    "question": "Chạy bộ có phải là môn thể thao dành cho người giàu không?",
+    "importance": 9,
+    "question": "Hệ sinh thái số liên ngành mang lại lợi ích gì cho người dân và doanh nghiệp?",
     "answers": [
       {
-        "text": "Không hẳn, nhưng người giàu có xu hướng chạy bộ nhiều hơn.",
+        "text": "Người dân dễ dàng tiếp cận dịch vụ và doanh nghiệp gia tăng cạnh tranh.",
         "correct": true
       },
       {
-        "text": "Chắc chắn là môn thể thao chỉ dành cho người giàu.",
+        "text": "Chỉ người dân mới được hưởng lợi.",
         "correct": false
       },
       {
-        "text": "Chạy bộ chỉ phù hợp với người có thời gian rảnh.",
+        "text": "Doanh nghiệp không có cơ hội phát triển.",
         "correct": false
       },
       {
-        "text": "Môn này không yêu cầu thiết bị nên ai cũng có thể chơi.",
+        "text": "Hệ sinh thái không ảnh hưởng đến nền kinh tế.",
         "correct": false
       }
     ]
@@ -3852,6 +3879,33 @@
     ]
   },
   {
+    "title": "Từng mắc quai bị có vô sinh không?",
+    "content": "Bệnh quai bị có thể gây ra một số biến chứng nghiêm trọng, bao gồm viêm tinh hoàn ở nam giới, đặc biệt là sau tuổi dậy thì, dẫn đến nguy cơ vô sinh. Nếu viêm tinh hoàn xảy ra ở cả hai bên, khả năng sản xuất tinh trùng sẽ suy giảm nghiêm trọng, gây ra tình trạng vô tinh. Trẻ gái cũng có thể bị viêm buồng trứng, nhưng ít khi dẫn đến vô sinh. Để phòng ngừa, việc tiêm vaccine quai bị là rất quan trọng.",
+    "link": "https://vnexpress.net/tung-mac-quai-bi-co-vo-sinh-khong-4865030.html",
+    "cat": "suc-khoe",
+    "positivity": 4,
+    "importance": 8,
+    "question": "Mắc quai bị có thể gây vô sinh không?",
+    "answers": [
+      {
+        "text": "Có, nếu viêm tinh hoàn xảy ra ở cả hai bên.",
+        "correct": true
+      },
+      {
+        "text": "Không, quai bị không ảnh hưởng đến khả năng sinh sản.",
+        "correct": false
+      },
+      {
+        "text": "Có, nhưng chỉ ở trẻ gái.",
+        "correct": false
+      },
+      {
+        "text": "Không, trẻ sẽ luôn có khả năng sinh sản.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "4 sai lầm phổ biến khi đi bộ gây đau và tăng cân",
     "content": "Chuyên gia Joanna Hall chỉ ra bốn sai lầm phổ biến khi đi bộ có thể dẫn đến đau và tăng cân. Những sai lầm này bao gồm sử dụng sai nhóm cơ, đi bộ bằng bàn chân thụ động, tư thế đầu không đúng và không vận động tay. Việc lạm dụng cơ gấp hông, đi bằng bàn chân phẳng và tư thế cúi đầu gây áp lực lên cột sống và khớp, trong khi không vận động tay làm giảm hiệu quả tập luyện. Để cải thiện, cần chú ý đến cách đi bộ và tư thế cơ thể.",
     "link": "https://vnexpress.net/4-sai-lam-pho-bien-khi-di-bo-gay-dau-va-tang-can-4864895.html",
@@ -3878,33 +3932,6 @@
       },
       {
         "text": "Chỉ đi bộ trên bề mặt bằng phẳng",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Từng mắc quai bị có vô sinh không?",
-    "content": "Bệnh quai bị có thể gây ra một số biến chứng nghiêm trọng, bao gồm viêm tinh hoàn ở nam giới, đặc biệt là sau tuổi dậy thì, dẫn đến nguy cơ vô sinh. Nếu viêm tinh hoàn xảy ra ở cả hai bên, khả năng sản xuất tinh trùng sẽ suy giảm nghiêm trọng, gây ra tình trạng vô tinh. Trẻ gái cũng có thể bị viêm buồng trứng, nhưng ít khi dẫn đến vô sinh. Để phòng ngừa, việc tiêm vaccine quai bị là rất quan trọng.",
-    "link": "https://vnexpress.net/tung-mac-quai-bi-co-vo-sinh-khong-4865030.html",
-    "cat": "suc-khoe",
-    "positivity": 4,
-    "importance": 8,
-    "question": "Mắc quai bị có thể gây vô sinh không?",
-    "answers": [
-      {
-        "text": "Có, nếu viêm tinh hoàn xảy ra ở cả hai bên.",
-        "correct": true
-      },
-      {
-        "text": "Không, quai bị không ảnh hưởng đến khả năng sinh sản.",
-        "correct": false
-      },
-      {
-        "text": "Có, nhưng chỉ ở trẻ gái.",
-        "correct": false
-      },
-      {
-        "text": "Không, trẻ sẽ luôn có khả năng sinh sản.",
         "correct": false
       }
     ]
@@ -4161,33 +4188,6 @@
     ]
   },
   {
-    "title": "4 hiểu lầm thường gặp về đường",
-    "content": "Bài viết đề cập đến 4 hiểu lầm phổ biến về đường, bao gồm những tác hại của đường không chỉ trong bánh kẹo, nước ngọt mà còn trong nhiều sản phẩm chế biến khác. Đường tinh luyện có thể gây tăng cân, béo phì, rối loạn chuyển hóa và tăng nguy cơ bệnh tim mạch. Tuy nhiên, không phải tất cả loại đường đều xấu; đường tự nhiên trong trái cây và rau củ mang lại nhiều lợi ích cho sức khỏe. Người tiêu dùng nên thận trọng với lượng đường bổ sung và kết hợp ăn uống hợp lý.",
-    "link": "https://vnexpress.net/4-hieu-lam-thuong-gap-ve-duong-4865016.html",
-    "cat": "suc-khoe",
-    "positivity": 6,
-    "importance": 8,
-    "question": "Có những hiểu lầm nào về đường mà mọi người thường mắc phải?",
-    "answers": [
-      {
-        "text": "Đường không chỉ có hại trong bánh kẹo và nước ngọt",
-        "correct": true
-      },
-      {
-        "text": "Đường tự nhiên không gây hại cho sức khỏe",
-        "correct": false
-      },
-      {
-        "text": "Cắt bỏ hoàn toàn đường khỏi chế độ ăn là cần thiết",
-        "correct": false
-      },
-      {
-        "text": "Chỉ ăn đường một lần trong ngày là an toàn",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Skoda Kushaq - CUV cỡ B mới nhận cọc tại đại lý",
     "content": "Skoda Kushaq, mẫu CUV cỡ B mới của Skoda, đã bắt đầu nhận cọc từ giữa tháng 3 với giá dự kiến khoảng 600 triệu đồng. Đây là mẫu xe thứ ba của Skoda tại Việt Nam, sau Kodiaq và Karoq, được lắp ráp bởi tập đoàn Thành Công. Xe có kích thước tương đồng với Mitsubishi Xforce và sẽ cạnh tranh với các đối thủ như Kia Seltos và Hyundai Creta. Dự kiến, Kushaq sẽ được chính thức giới thiệu vào tháng 6 năm 2025 và có thể giao xe vào quý II.",
     "link": "https://vnexpress.net/skoda-kushaq-cuv-co-b-moi-nhan-coc-tai-dai-ly-4864777.html",
@@ -4210,6 +4210,33 @@
       },
       {
         "text": "Giữa tháng 1",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "4 hiểu lầm thường gặp về đường",
+    "content": "Bài viết đề cập đến 4 hiểu lầm phổ biến về đường, bao gồm những tác hại của đường không chỉ trong bánh kẹo, nước ngọt mà còn trong nhiều sản phẩm chế biến khác. Đường tinh luyện có thể gây tăng cân, béo phì, rối loạn chuyển hóa và tăng nguy cơ bệnh tim mạch. Tuy nhiên, không phải tất cả loại đường đều xấu; đường tự nhiên trong trái cây và rau củ mang lại nhiều lợi ích cho sức khỏe. Người tiêu dùng nên thận trọng với lượng đường bổ sung và kết hợp ăn uống hợp lý.",
+    "link": "https://vnexpress.net/4-hieu-lam-thuong-gap-ve-duong-4865016.html",
+    "cat": "suc-khoe",
+    "positivity": 6,
+    "importance": 8,
+    "question": "Có những hiểu lầm nào về đường mà mọi người thường mắc phải?",
+    "answers": [
+      {
+        "text": "Đường không chỉ có hại trong bánh kẹo và nước ngọt",
+        "correct": true
+      },
+      {
+        "text": "Đường tự nhiên không gây hại cho sức khỏe",
+        "correct": false
+      },
+      {
+        "text": "Cắt bỏ hoàn toàn đường khỏi chế độ ăn là cần thiết",
+        "correct": false
+      },
+      {
+        "text": "Chỉ ăn đường một lần trong ngày là an toàn",
         "correct": false
       }
     ]
@@ -5207,33 +5234,6 @@
       },
       {
         "text": "Không rõ thời gian",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Không di dời cây cổ thụ khi cải tạo vườn hoa Lý Thái Tổ",
-    "content": "UBND quận Hoàn Kiếm đã thông báo rằng trong quá trình cải tạo vườn hoa Lý Thái Tổ, các cây cổ thụ và cây có giá trị sẽ không bị di dời. Theo kế hoạch, sẽ có khoảng 100 cây được giữ nguyên, trong khi 25 cây nhỏ và sâu bệnh sẽ được thay thế hoặc dịch chuyển. Dự án cải tạo nhằm nâng cấp cảnh quan khu vực này, với các hạng mục như hệ thống nhạc nước và cải tạo đường dạo, dự kiến bắt đầu vào tháng 4 và hoàn thành trong tháng 10.",
-    "link": "https://vnexpress.net/khong-di-doi-cay-co-thu-khi-cai-tao-vuon-hoa-ly-thai-to-4864883.html",
-    "cat": "thoi-su",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Kế hoạch cải tạo vườn hoa Lý Thái Tổ có gì đặc biệt về việc di dời cây cổ thụ?",
-    "answers": [
-      {
-        "text": "Cây cổ thụ sẽ không bị di dời.",
-        "correct": true
-      },
-      {
-        "text": "Tất cả cây xanh sẽ được di dời.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ di dời cây nhỏ và không có giá trị.",
-        "correct": false
-      },
-      {
-        "text": "Cây cổ thụ sẽ được thay thế bằng cây mới.",
         "correct": false
       }
     ]
