Batch update of generated files

--- a/home.html
+++ b/home.html
@@ -148,6 +148,33 @@
     // Replace this with your actual news data.
     const newsData = [
   {
+    "title": "Nghiên cứu thành công vaccine mới chống lại 4 loại ung thư",
+    "content": "Các nhà nghiên cứu tại Đại học Tufts đã phát triển thành công một loại vaccine mới có khả năng chống lại bốn loại ung thư khác nhau. Vaccine này kích hoạt phản ứng miễn dịch mạnh mẽ bằng cách sử dụng hỗn hợp protein từ các khối u rắn, giúp cơ thể nhận diện và tấn công tế bào ung thư hiệu quả hơn. Kết quả thử nghiệm trên động vật cho thấy vaccine có khả năng giảm nguy cơ tái phát ung thư và ngăn chặn sự phát triển của các khối u ác tính như ung thư vú, ung thư phổi và ung thư buồng trứng.",
+    "link": "https://vnexpress.net/nghien-cuu-thanh-cong-vaccine-moi-chong-lai-4-loai-ung-thu-4865380.html",
+    "cat": "suc-khoe",
+    "positivity": 9,
+    "importance": 10,
+    "question": "Vaccine mới chống lại ung thư nào đã được phát triển tại Đại học Tufts?",
+    "answers": [
+      {
+        "text": "Bốn loại ung thư",
+        "correct": true
+      },
+      {
+        "text": "Hai loại ung thư",
+        "correct": false
+      },
+      {
+        "text": "Một loại ung thư",
+        "correct": false
+      },
+      {
+        "text": "Năm loại ung thư",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Bữa tối có nên 'ăn như ăn mày'?",
     "content": "Bài viết nhấn mạnh tầm quan trọng của bữa tối đối với sức khỏe con người, phản bác lại quan niệm \"ăn tối như kẻ ăn mày\". Bữa tối cần cung cấp đủ dinh dưỡng và không nên bị bỏ qua hoặc ăn quá ít, vì điều này có thể gây hại cho sức khỏe, như mệt mỏi hay khó ngủ. Người trưởng thành nên phân chia lượng calo hợp lý cho ba bữa chính, trong đó bữa tối vẫn cần thiết nhưng có thể giảm nhẹ để đảm bảo cân bằng dinh dưỡng.",
     "link": "https://vnexpress.net/bua-toi-co-nen-an-nhu-an-may-4865216.html",
@@ -3556,33 +3583,6 @@
     ]
   },
   {
-    "title": "Từng mắc quai bị có vô sinh không?",
-    "content": "Bệnh quai bị có thể gây ra một số biến chứng nghiêm trọng, bao gồm viêm tinh hoàn ở nam giới, đặc biệt là sau tuổi dậy thì, dẫn đến nguy cơ vô sinh. Nếu viêm tinh hoàn xảy ra ở cả hai bên, khả năng sản xuất tinh trùng sẽ suy giảm nghiêm trọng, gây ra tình trạng vô tinh. Trẻ gái cũng có thể bị viêm buồng trứng, nhưng ít khi dẫn đến vô sinh. Để phòng ngừa, việc tiêm vaccine quai bị là rất quan trọng.",
-    "link": "https://vnexpress.net/tung-mac-quai-bi-co-vo-sinh-khong-4865030.html",
-    "cat": "suc-khoe",
-    "positivity": 4,
-    "importance": 8,
-    "question": "Mắc quai bị có thể gây vô sinh không?",
-    "answers": [
-      {
-        "text": "Có, nếu viêm tinh hoàn xảy ra ở cả hai bên.",
-        "correct": true
-      },
-      {
-        "text": "Không, quai bị không ảnh hưởng đến khả năng sinh sản.",
-        "correct": false
-      },
-      {
-        "text": "Có, nhưng chỉ ở trẻ gái.",
-        "correct": false
-      },
-      {
-        "text": "Không, trẻ sẽ luôn có khả năng sinh sản.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "4 sai lầm phổ biến khi đi bộ gây đau và tăng cân",
     "content": "Chuyên gia Joanna Hall chỉ ra bốn sai lầm phổ biến khi đi bộ có thể dẫn đến đau và tăng cân. Những sai lầm này bao gồm sử dụng sai nhóm cơ, đi bộ bằng bàn chân thụ động, tư thế đầu không đúng và không vận động tay. Việc lạm dụng cơ gấp hông, đi bằng bàn chân phẳng và tư thế cúi đầu gây áp lực lên cột sống và khớp, trong khi không vận động tay làm giảm hiệu quả tập luyện. Để cải thiện, cần chú ý đến cách đi bộ và tư thế cơ thể.",
     "link": "https://vnexpress.net/4-sai-lam-pho-bien-khi-di-bo-gay-dau-va-tang-can-4864895.html",
@@ -3609,6 +3609,33 @@
       },
       {
         "text": "Chỉ đi bộ trên bề mặt bằng phẳng",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Từng mắc quai bị có vô sinh không?",
+    "content": "Bệnh quai bị có thể gây ra một số biến chứng nghiêm trọng, bao gồm viêm tinh hoàn ở nam giới, đặc biệt là sau tuổi dậy thì, dẫn đến nguy cơ vô sinh. Nếu viêm tinh hoàn xảy ra ở cả hai bên, khả năng sản xuất tinh trùng sẽ suy giảm nghiêm trọng, gây ra tình trạng vô tinh. Trẻ gái cũng có thể bị viêm buồng trứng, nhưng ít khi dẫn đến vô sinh. Để phòng ngừa, việc tiêm vaccine quai bị là rất quan trọng.",
+    "link": "https://vnexpress.net/tung-mac-quai-bi-co-vo-sinh-khong-4865030.html",
+    "cat": "suc-khoe",
+    "positivity": 4,
+    "importance": 8,
+    "question": "Mắc quai bị có thể gây vô sinh không?",
+    "answers": [
+      {
+        "text": "Có, nếu viêm tinh hoàn xảy ra ở cả hai bên.",
+        "correct": true
+      },
+      {
+        "text": "Không, quai bị không ảnh hưởng đến khả năng sinh sản.",
+        "correct": false
+      },
+      {
+        "text": "Có, nhưng chỉ ở trẻ gái.",
+        "correct": false
+      },
+      {
+        "text": "Không, trẻ sẽ luôn có khả năng sinh sản.",
         "correct": false
       }
     ]
